# reacttrs

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
reacttrs/: __init__.py  _callback.py  reactive.py
tests/: test_reactive.py
