[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reacttrs"
dynamic = ["version"]
description = "Attributes with superpowers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "David Brochart", email = "david.brochart@gmail.com" },
]
keywords = [
    "textual",
]

[project.urls]
Homepage = "https://github.com/davidbrochart/reacttrs"

[tool.hatch.version]
path = "reacttrs/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/reacttrs",
]
