[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reacttrs"
dynamic = ["version"]
description = "Attributes with superpowers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "David Brochart", email = "david.brochart@gmail.com" },
    { name = "Will McGugan", email = "willmcgugan@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/davidbrochart/reacttrs"

[project.optional-dependencies]
test = [
    "pytest >=8.1.1",
    "mypy >=1.9.0",
]

[tool.hatch.version]
path = "reacttrs/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/reacttrs",
]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["reacttrs"]
